final UI update

--- a/community.html
+++ b/community.html
@@ -319,7 +319,7 @@
                     <div class="featured-posts">
                         <h2 class="mb-4">Featured Posts</h2>
                         <div class="post d-flex justify-content-between align-items-start mb-5">
-                            <a href="articles.html" class="text-decoration-none text-dark d-flex justify-content-between w-100">
+                            <a href="resource.html" class="text-decoration-none text-dark d-flex justify-content-between w-100">
                                 <div class="me-3">
                                     <h3>Tips for Training Your Puppy</h3>
                                     <p>Effective techniques for housebreaking, obedience training, and socialization.</p>
