--- a/resources.html
+++ b/resources.html
@@ -280,7 +280,7 @@
                             <img src="images/potty-training-tips-ZjqR3w4r.jpg" class="rounded" alt="Potty Training" style="width: 100px; object-fit: cover; margin-right: 30px;">
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">Potty Training<br>Tips</h6>
-                                <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm mt-2">View More</a>
                             </div>
                         </div>
                     </div>
@@ -289,7 +289,7 @@
                             <img src="images/FA_The-importance-of-dental-care-for-your-pet-1[1].png" class="rounded" alt="Dental Care" style="width: 100px; object-fit: cover; margin-right: 30px;">
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">Pet Dental<br>Care</h6>
-                                <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm mt-2">View More</a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                             <img src="images/socializing-an-older-dog[1].jpg" class="rounded" alt="Socializing" style="width: 100px; object-fit: cover; margin-right: 30px;">
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">How To Socialise<br>Pets</h6>
-                                <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm mt-2">View More</a>
                             </div>
                         </div>
                     </div>
@@ -307,7 +307,7 @@
                             <img src="images/8-Power-Foods-to-Add-to-Your-Dog’s-Homemade-or-Raw-Diet[1].jpg" class="rounded" alt="Diet" style="width: 100px; object-fit: cover; margin-right: 30px;">
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">Safe Pets<br>Diets</h6>
-                                <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm mt-2">View More</a>
                             </div>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">How to Train<br>Your Puppy</h6>
                                 <p class="text-muted" style="font-size: 0.9rem;">Learn tips to get your dogs to obey your commands</p>
-                                <a href="#" class="btn btn-dark btn-sm">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm">View More</a>
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">Keeping Your<br>Pet Fit</h6>
                                 <p class="text-muted" style="font-size: 0.9rem;">Discover Ways To Maintain a<br> Healthy Weight For Your Pet</p>
-                                <a href="#" class="btn btn-dark btn-sm">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm">View More</a>
                             </div>
                         </div>
                     </div>
@@ -349,7 +349,7 @@
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">Routine Vet Visits<br> Explained</h6>
                                 <p class="text-muted" style="font-size: 0.9rem;">Understand what happens<br> during a typical check-up</p>
-                                <a href="#" class="btn btn-dark btn-sm">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm">View More</a>
                             </div>
                         </div>
                     </div>
@@ -359,7 +359,7 @@
                             <div class="card-body p-0">
                                 <h6 class="card-title" style="font-size: 1.4rem;">Grooming<br>Basics</h6>
                                 <p class="text-muted" style="font-size: 0.9rem;">Essential grooming techniques<br> for pets at home</p>
-                                <a href="#" class="btn btn-dark btn-sm">View More</a>
+                                <a href="resource.html" class="btn btn-dark btn-sm">View More</a>
                             </div>
                         </div>
                     </div>
