--- a/dashboard.html
+++ b/dashboard.html
@@ -226,9 +226,11 @@
             </div>
 
             <div id="profile-dropdown" class="position-absolute bg-white border shadow-sm p-3" style="top: 40px; right: 0; width: 150px; display: none; z-index: 10; border-radius: 10px;" >
-              <p class="mb-2"><i class="bi bi-gear me-2"></i>Settings</p>
-              <p class="mb-0"><i class="bi bi-box-arrow-right me-2"></i>Logout</p>
-            </div>
+    <a href="settings.html" id="settingsLink" class="d-flex align-items-center text-dark text-decoration-none mb-2">
+        <i class="bi bi-gear me-2"></i>Settings</a>
+    <a href="#" id="logoutLink" class="d-flex align-items-center text-dark text-decoration-none">
+        <i class="bi bi-box-arrow-right me-2"></i>Logout</a>
+        </div>
           </div>
         </div>
 
@@ -291,8 +293,8 @@
                 <h6 class="fw-bold mb-0">New Articles</h6>
                 <a href="articles.html" class="text-decoration-none">View all</a>
               </div>
-              <p class="mb-1">How to take care of a Parrot</p>
-              <p class="mb-0">Fast procedure to treat flea in Birds.</p>
+              <p class="mb-1">Understanding pet nutrition.</p>
+              <p class="mb-0">Common nutritional mistakes to avoid.</p>
             </div>
           </div>
         </div>
