--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
                         <a class="nav-link active" aria-current="page" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a> </li>
+                        <a class="nav-link" href="sevices.html">Services</a> </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
